# pdf-web-reader

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: checks.yml
docs/: image-caption-sprint-notes.md
src/: pdf_cache_tool.py  pdf_reader_tool.py
tests/: book_layout_regression_test.py  cache_tool_test.py  smoke_test.py
